[package]
name = "rustrush-demo"
description = "Chat demo application for the RustRush conference"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
libp2p = { git = "https://github.com/tomaka/libp2p-rs", branch = "mdns-behaviour" }
names = "0.11"
tokio = "0.1"
tokio-stdin-stdout = "0.1"
